# SME-Supply-Chain-Risk-Analsis---Algonquin-College

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_REQUIREMENTS.md  README.md  SETUP.md  docker-compose.dev-full.yml  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 78b576fc3930_initial_base_model.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  logging.py  redis.py  storage.py
backend/app/db/: __init__.py  session.py
backend/app/models/: base.py
backend/app/schemas/: base.py
backend/demos/: __init__.py  data_collection_demo.py  run_demo.sh
backend/tests/: test_health.py
docs/: architecture-validation-report-2025-11-28.md  architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2025-11-28.md  prd-validation-report-2025-11-28.md  prd.md  product-brief-SME-Supply-Chain-Risk-Analysis-2025-11-28.md  sprint-change-proposal-2025-12-01.md  test-design-system.md  ux-color-themes.html  ux-design-directions.html  ux-design-specification.md
docs/sprint-artifacts/: 1-1-initialize-monorepo-structure.context.xml  1-1-initialize-monorepo-structure.md  1-2-setup-backend-foundation-fastapi.context.xml  1-2-setup-backend-foundation-fastapi.md  1-3-setup-frontend-foundation-nextjs-shadcn-ui.context.xml  1-3-setup-frontend-foundation-nextjs-shadcn-ui.md  1-4-setup-database-infrastructure.md  1-5-setup-supporting-infrastructure-redis-minio.context.xml  1-5-setup-supporting-infrastructure-redis-minio.md  1-6-configure-development-environment.context.xml  1-6-configure-development-environment.md  1-7-setup-fully-dockerized-development-environment.md  1-8-hotfix-upgrade-react-nextjs-stable-versions.md  1-9-migrate-tailwind-css-v4.context.xml  1-9-migrate-tailwind-css-v4.md  epic-1-retrospective.md  sprint-status.yaml  tech-spec-epic-1.md
frontend/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  docker-entrypoint.sh  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/ui/__tests__/: button.test.tsx
scripts/: ide-setup.sh
