# SME Supply Chain Risk Analysis - Backend Python Tool Configuration

[project]
name = "sme-backend"
version = "0.1.0"
description = "SME Supply Chain Risk Analysis Platform - Backend API"
requires-python = ">=3.11"

# ============================================================================
# pytest configuration (AC5)
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# black configuration (AC6)
# ============================================================================
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | \.mypy_cache
    | alembic/versions
)/
'''

# ============================================================================
# ruff configuration (AC7)
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ============================================================================
# mypy configuration (AC8)
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "alembic/",
    "venv/",
    ".venv/",
    "tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Relax strict mode for legacy infrastructure modules (from prior stories)
[[tool.mypy.overrides]]
module = [
    "app.core.storage",
    "app.core.logging",
    "app.core.redis",
]
ignore_errors = true
